# REGoth

./: .clang-format  .gitignore  .gitmodules  .travis.yml  .travis_build.sh  .ycm_extra_conf.py  CMakeLists.txt  README.md  compile_shaders.bat  compile_shaders.sh  create_git_hooks.sh  fedora25_build.sh  update_ctags_cscope.sh  update_git.bat  update_git.sh
REGoth-Android/: .gitignore  build.gradle  build.sh  gradle.properties  install_dependencies.sh  install_dependencies_and_build.sh
REGoth-Android/app/: build.gradle  proguard-rules.pro
REGoth-Android/gradle/wrapper/: gradle-wrapper.properties
cmake/: clang-format.cmake  ffmpeg.cmake
cmake/modules/: FindGLFW3.cmake
content/: callgrind.out.10778  callgrind.out.9880  note.txt  sky.json
content/shaders/essl/: fs_image.bin.d  fs_particle_textured.bin.d  fs_particle_textured.bin.disasm  fs_point_light.bin.d  fs_screenquad.bin.d  fs_screenquad.bin.disasm  fs_sky_domecolor.bin.d  fs_sky_domecolor.bin.disasm  fs_skylayer.bin.d  fs_skylayer.bin.disasm  fs_stencil_texture_clip.bin.d  fs_stencil_texture_clip.bin.disasm  vs_image.bin.d  vs_particle.bin.d  vs_screenquad.bin.d  vs_screenquad.bin.disasm  vs_skinned.bin.d  vs_skinned.bin.disasm  vs_sky.bin.d  vs_sky.bin.disasm  vs_sky_domecolor.bin.d  vs_sky_domecolor.bin.disasm  vs_world.bin.d  vs_world_instanced.bin.d  vs_world_instanced.bin.disasm
content/shaders/gles/: fs_color.bin.d  fs_image.bin.d  fs_image.bin.disasm  fs_particle_textured.bin.d  fs_particle_textured.bin.disasm  fs_point_light.bin.d  fs_point_light.bin.disasm  fs_screenquad.bin.d  fs_sky_domecolor.bin.d  fs_skylayer.bin.d  fs_stencil_texture_clip.bin.d  fs_stencil_texture_clip.bin.disasm  fs_texture.bin.d  vs_image.bin.d  vs_image.bin.disasm  (+16 more)
hooks/: pre-commit
lib/adpcm/: CMakeLists.txt  README  adpcm-lib.cpp  adpcm-xq.c  decode  decode.cpp
lib/json/: LICENSE.MIT  json.hpp
src/: rgconfig.h.in
src/android/: AndroidManifest.xml.in  Apk.cmake  CMakeLists.txt  LoadLibraries.java.in  android.toolchain.cmake
src/android/compat/: malloc.c  malloc.h
src/android/src/: Main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioWorld.cpp  AudioWorld.h  NullAudioEngine.cpp  NullAudioEngine.h  OpenALAudioEngine.cpp  OpenALAudioEngine.h  OpenAlAudioEngine.cpp  OpenAlAudioEngine.h  WavReader.cpp  WavReader.h
src/components/: AnimHandler.cpp  AnimHandler.h  Entities.cpp  Entities.h  EntityActions.cpp  EntityActions.h  Vob.cpp  Vob.h  VobClasses.cpp  VobClasses.h
src/content/: Animation.h  AnimationAllocator.cpp  AnimationAllocator.h  AnimationLibrary.cpp  AnimationLibrary.h  AudioEngine.cpp  AudioEngine.h  ContentLoad.cpp  ContentLoad.h  GenericMeshAllocator.cpp  GenericMeshAllocator.h  Materials.h  Shader.cpp  Shader.h  SkeletalMeshAllocator.cpp  SkeletalMeshAllocator.h  Sky.cpp  Sky.h  SkyConfig.cpp  SkyConfig.h  StaticLevelMesh.cpp  StaticLevelMesh.h  StaticMesh.h  StaticMeshAllocator.cpp  StaticMeshAllocator.h  Texture.cpp  Texture.h  VertexTypes.cpp  VertexTypes.h
src/engine/: AsyncAction.cpp  AsyncAction.h  AudioEngine.cpp  AudioEngine.h  AudioWorld.cpp  AudioWorld.h  BaseEngine.cpp  BaseEngine.h  BspTree.cpp  BspTree.h  GameClock.cpp  GameClock.h  GameEngine.cpp  GameEngine.h  GameSession.cpp  GameSession.h  Input.cpp  Input.h  JobManager.cpp  JobManager.h  MusicZoneManager.cpp  MusicZoneManager.h  NetEngine.cpp  NetEngine.h  Platform.cpp  Platform.h  PlatformAndroid.cpp  PlatformAndroid.h  PlatformGLFW.cpp  PlatformGLFW.h  Waynet.cpp  Waynet.h  World.cpp  World.cpp.orig  World.cpp~RF887e55.TMP  World.h  WorldAllocators.h  WorldMesh.cpp  WorldMesh.h  WorldTypes.h
src/handle/: Handle.h  HandleDef.h
src/logic/: CameraController.cpp  CameraController.h  CharacterEquipment.cpp  CharacterEquipment.h  ClientState.cpp  ClientState.h  Console.cpp  Console.h  Controller.cpp  Controller.h  ControllerTypes.h  DialogManager.cpp  DialogManager.h  FightAI.cpp  FightAI.h  Inventory.cpp  Inventory.h  ItemController.cpp  ItemController.h  LogManager.cpp  LogManager.h  LogicDef.h  MobController.cpp  MobController.h  MusicController.cpp  MusicController.h  NetClientScriptEngine.cpp  NetClientScriptEngine.h  NetScriptEngine.cpp  NetScriptEngine.h  NpcAIHandler.cpp  NpcAIHandler.h  NpcAnimationHandler.cpp  NpcAnimationHandler.h  NpcScriptState.cpp  NpcScriptState.h  Pathfinder.cpp  Pathfinder.h  PfxManager.cpp  PfxManager.h  (+15 more)
src/math/: mathlib.cpp  mathlib.h
src/media/: Video.cpp  Video.h
src/memory/: AllocatorBundle.h  ComponentSystem.h  Config.h  FreeList.h  MemUtils.h  MeshAllocator.h  ObjectAllocator.h  StaticReferencedAllocator.h
src/net/: NetScriptState.cpp  NetScriptState.h
src/physics/: CollisionShape.h  DebugDrawer.h  MotionState.cpp  MotionState.h  PhysicsSystem.cpp  PhysicsSystem.h  RigidBody.h
src/render/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Render.cpp  Render.h  RenderObject.cpp  RenderObject.h  RenderSystem.cpp  RenderSystem.h  RenderUtils.cpp  RenderUtils.h  SkyRendering.cpp  SkyRendering.h  ViewList.h  WorldRender.cpp  WorldRender.cpp.orig  WorldRender.h
src/shaders/: fs_particle_textured.sc  fs_point_light.sc  fs_sky_domecolor.sc  fs_skylayer.sc  makefile  tools.sh  varying.def.sc  vs_screenquad.sc  vs_skinned.sc  vs_sky.sc  vs_sky_domecolor.sc  vs_world.sc  vs_world_instanced.sc
src/ui/: BarView.cpp  BarView.h  Console.cpp  Console.h  ConsoleBox.cpp  ConsoleBox.h  DialogBox.cpp  DialogBox.h  Hud.cpp  Hud.h  ImageView.cpp  ImageView.h  IntroduceChapterView.cpp  IntroduceChapterView.h  InventoryView.cpp  InventoryView.h  ItemGrid.cpp  ItemGrid.h  ItemInfobox.cpp  ItemInfobox.h  LoadingScreen.cpp  LoadingScreen.h  Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  MenuItemListbox.cpp  MenuItemListbox.h  MenuItemListboxEntry.cpp  MenuItemListboxEntry.h  MenuItemScrollableText.cpp  MenuItemScrollableText.h  MenuStack.cpp  MenuStack.h  Menu_Load.cpp  Menu_Load.h  Menu_Log.cpp  Menu_Log.h  Menu_Main.cpp  Menu_Main.h  (+20 more)
src/utils/: GLFW_Keys.h  Utils.cpp  Utils.h  bgfx_lib.h  cli.cpp  cli.h  naturalcompare.h  tuple.h  zTools.cpp  zTools.h
toolchain/: toolchain-cross-compile-mingw32.cmake
(+129 files in other folders)
